# Assebler-like-Interpreter

./: CMakeLists.txt  README.md  main.cpp  memory.txt  program_code.txt
include/ISM/: IStudyMachine.h
include/Operations/: AddMemMemMem.h  AddRegMem.h  AddRegReg.h  CmpRegMem.h  CmpRegReg.h  DivMemMemMemSigned.h  DivMemMemMemUnsigned.h  DivRegMemSigned.h  DivRegMemUnsigned.h  DivRegRegSigned.h  DivRegRegUnsigned.h  Filler.h  IOperation.h  JumpEqMemMemMem.h  JumpEqRegMem.h  JumpGEqMemMemMemSigned.h  JumpGEqMemMemMemUnsigned.h  JumpGEqRegMem.h  JumpGreaterMemMemMemSigned.h  JumpGreaterMemMemMemUnsigned.h  JumpGreaterRegMem.h  JumpLEqMemMemMemSigned.h  JumpLEqMemMemMemUnsigned.h  JumpLEqRegMem.h  JumpLessMemMemMemSigned.h  JumpLessMemMemMemUnsigned.h  JumpLessRegMem.h  JumpMemMemMem.h  JumpNotEqMemMemMem.h  JumpNotEqRegMem.h  JumpRegMem.h  MulMemMemMemSigned.h  MulMemMemMemUnsigned.h  MulRegMemSigned.h  MulRegMemUnsigned.h  MulRegRegSigned.h  MulRegRegUnsigned.h  SendMem2Reg.h  SendMemMemMem.h  SendReg2Mem.h  (+6 more)
include/SM-R/: R_modules.h  (+1 more)
src/Operations/: AddMemMemMem.cpp  AddRegMem.cpp  AddRegReg.cpp  CMakeLists.txt  CmpRegMem.cpp  CmpRegReg.cpp  DivMemMemMemSigned.cpp  DivMemMemMemUnsigned.cpp  DivRegMemSigned.cpp  DivRegMemUnsigned.cpp  DivRegRegSigned.cpp  DivRegRegUnsigned.cpp  Filler.cpp  JumpEqMemMemMem.cpp  JumpEqRegMem.cpp  JumpGEqMemMemMemSigned.cpp  JumpGEqMemMemMemUnsigned.cpp  JumpGEqRegMem.cpp  JumpGreaterMemMemMemSigned.cpp  JumpGreaterMemMemMemUnsigned.cpp  JumpGreaterRegMem.cpp  JumpLEqMemMemMemSigned.cpp  JumpLEqMemMemMemUnsigned.cpp  JumpLEqRegMem.cpp  JumpLessMemMemMemSigned.cpp  JumpLessMemMemMemUnsigned.cpp  JumpLessRegMem.cpp  JumpMemMemMem.cpp  JumpNotEqMemMemMem.cpp  JumpNotEqRegMem.cpp  JumpRegMem.cpp  MulMemMemMemSigned.cpp  MulMemMemMemUnsigned.cpp  MulRegMemSigned.cpp  MulRegMemUnsigned.cpp  MulRegRegSigned.cpp  MulRegRegUnsigned.cpp  SendMem2Reg.cpp  SendMemMemMem.cpp  SendReg2Mem.cpp  (+6 more)
(+9 files in other folders)
